1999-11-12  Tom Tromey  <tromey@cygnus.com>

	* automake.texi (Gnits): Allow COPYING.LIB again.
	* automake.in (check_gnits_standards): Allow COPYING.LIB again.

1999-11-11  Jim Meyering  <meyering@ascend.com>

	* dist.am (distcheck): Remove $(distdir).tar.gz before counting
	files.

1999-11-09  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_dist): Typo fix.  From Jim Meyering.

1999-11-09  Jim Meyering  <meyering@ascend.com>

	* automake.in (handle_dist): Remove the DISTHOOK and GETTEXT
	markers, no matter what.

1999-11-08  Tom Tromey  <tromey@cygnus.com>

	* dist.am (distcheck): Put `&&' at the start of the distcheck-hook
	line.

	* automake.in (handle_dist_worker): Use `cp -R', not `cp -r'.
	From Jim Meyering.  Also, don't mention file name in `cp'
	destination.  From Olly Betts.

1999-10-27  Miodrag Vallat  <miodrag@ifrance.com>

	* texinfos.am (uninstall-info): Use installed info file, not one
	from srcdir or builddir.

1999-11-07  Tom Tromey  <tromey@cygnus.com>

	* clean.am (maintainer-clean-generic): Remove Makefile.in.  From
	Jeff Bailey

	Fix for PR automake/18:
	* automake.in (handle_dist): Add contents of dist.am to the output
	rules.
	* Makefile.am (amfiles): Added dist.am.
	* dist.am: New file.
	(distcheck): Added uninstall and distclean checks.

	* automake.in (PATH_PATTERN): Added `-' as allowable character.
	Fixes PR automake/20.  From Matthew D. Langston.

	* automake.in (SUFFIX_RULE_PATTERN): Add `0-9' as characters
	allowed in suffixes.  Fixes PR 22.  From Matthias Clasen.

1999-10-03  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>

	* m4/lispdir.m4: -batch must come before -q.
	* elisp-comp: Likewise.
	Reported by Lars Hecking <lhecking@nmrc.ucc.ie>
	* THANKS: Added Lars.

1999-08-15  Tom Tromey  <tromey@cygnus.com>

	* automake.in (get_object_extension): Fixed quoting bug.  Fixes
	ansi4.test.

1999-07-27  Tom Tromey  <tromey@cygnus.com>

	* config.guess, config.sub: New versions from autoconf.

1999-07-13  Tom Tromey  <tromey@cygnus.com>