@@ -2297,9 +2297,10 @@ sub handle_texinfo
 	# this explicitly because otherwise too many things could be
 	# removed.  In particular the ".log" extension might
 	# reasonably be used in other contexts by the user.
+	# FIXME: this is really out of control.
 	foreach $tc_cursor ('aux', 'cp', 'cps', 'dvi', 'fn', 'fns', 'pgs',
 			    'ky', 'kys', 'ps', 'log', 'pg', 'toc', 'tp', 'tps',
-			    'vr', 'vrs', 'op', 'tr', 'cv', 'cn')
+			    'vr', 'vrs', 'op', 'tr', 'cv', 'cn', 'cm', 'ov')
 	{
 	    push (@texi_cleans, $infobase . '.' . $tc_cursor);
 	}
@@ -2608,7 +2609,7 @@ sub handle_dist_worker
 
 
 	# Create dist directory.
-	$output_rules .= ("\t-rm -rf \$(distdir)\n"
+	$output_rules .= ("\t-chmod -R a+w \$(distdir) > /dev/null 2>&1; rm -rf \$(distdir)\n"
 			  . "\tmkdir \$(distdir)\n");
     }
 
@@ -6722,7 +6723,7 @@ sub initialize_global_constants
     $dist{'dist'} = ("\t"
 		     .  '$(AMTAR) ch$(AMTARFLAGS)f - $(distdir) | GZIP=$(GZIP_ENV) gzip -c > $(distdir).tar.gz'
 		     . "\n");
-    $dist_trailer = "\t" . '-rm -rf $(distdir)' . "\n";
+    $dist_trailer = "\t" . '-chmod -R a+w $(distdir) > /dev/null 2>&1; rm -rf $(distdir)' . "\n";
 }
 
 # (Re)-Initialize per-Makefile.am variables.
