@@ -1,3 +1,3 @@
-@set UPDATED 20 June 1999
+@set UPDATED 12 November 1999
 @set EDITION 1.4a
 @set VERSION 1.4a
