@@ -1,5 +1,15 @@
 1999-11-12  Tom Tromey  <tromey@cygnus.com>
 
+	* Makefile.am (path-check): Make sure distdir is writeable before
+	removing it.
+	* automake.in (handle_texinfo): Added `cm' and `ov' extensions.
+	(handle_dist_worker): Make sure distdir is writeable before
+	removing it.
+	(initialize_global_constants [$dist_trailer]): Make sure distdir
+	is writeable before removing it.
+	* dist.am (distcheck): Make the new source tree read-only before
+	compiling.  Idea from Karl Berry.
+
 	* automake.texi (Gnits): Allow COPYING.LIB again.
 	* automake.in (check_gnits_standards): Allow COPYING.LIB again.
 
